# youtube-downloader

./: Cargo.toml  Dioxus.toml  README.md
public/: tailwind.css
src/: main.rs
