[package]
name = "youtube-downloader"
version = "0.1.0"
authors = ["davisuga <daviciencia1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }
tokio = { version = "1.0", features = ["full"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
dioxus-desktop = "0.5.6"
futures-util = "0.3.30"
